test/TestPhases/namecheck/invalid/XlocalShadow2.blc
module XlocalShadow2


ref struct x
     var x: int8 = 0
extension
    activity x ()()
        var x: int8 = 0
        var x: int8 = 0
    end
end
